Updated file path

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     </head>
     <body>
         <div class="carousel">
-            <img class="meme meme-1" src="/dog-memes/meme-1.png" />
-            <img class="meme meme-2" src="/dog-memes/meme-2.png" />
-            <img class="meme meme-3" src="/dog-memes/meme-3.png" />
-            <img class="meme meme-4" src="/dog-memes/meme-4.png" />
+            <img class="meme meme-1" src="dog-memes/meme-1.png" />
+            <img class="meme meme-2" src="dog-memes/meme-2.png" />
+            <img class="meme meme-3" src="dog-memes/meme-3.png" />
+            <img class="meme meme-4" src="dog-memes/meme-4.png" />
             <button class="btn btn--left">
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
